--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.6.4",
     "next": "12.3.1",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1"
