Nov-dec report updated

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://admin:admin123@cluster0.xdwm0vm.mongodb.net/?retryWrites=true&w=majority
+PAYPAL_CLIENT_ID=AeocOI9bKlq2yIJdwRvaKJSxB5iroZipB8NeqPgEWqFfBTC_I2-pQtB_TmyKSyd4EQhM6kpnCx_jBTa0
