--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.6.2",
     "@heroicons/react": "^1.0.6",
+    "@paypal/react-paypal-js": "^7.8.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.9.1",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.6.4",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.31.2",
     "react-toastify": "^9.0.8"
