--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "start-server-and-test dev 3000 cypress:open",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.2",
@@ -27,9 +29,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "chance": "^1.1.9",
+    "cypress": "^12.1.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
+    "start-server-and-test": "^1.15.2",
     "tailwindcss": "^3.1.8"
   }
 }
