--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.4.12",
     "chance": "^1.1.9",
     "cypress": "^12.1.0",
+    "cypress-localstorage-commands": "^2.2.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
